# story-telling

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  azure.yaml  pyproject.toml  requirements.txt  story.md
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: agent-hosting-architecture.md
infra/: main.bicep  main.json  main.parameters.json
scripts/: build_ingestion_image.py  build_narrator_image.py  create_knowledgebase.py  delete_agents.py  delete_all.py  delete_research_mcp_server.py  delete_sandbox.py  deploy_agents.py  deploy_helpers.py  deploy_hosted_agents.py  deploy_prompt_agents.py  deploy_research_mcp_server.py  deploy_toolbox.py  deploy_workflow_agents.py  run_ingestion_sandbox.py  search_index_pipeline.py  search_text_index_pipeline.py
src/: __init__.py
src/agents/: __init__.py
src/content/: __init__.py  content_extractor.py  content_image_extractor.py  content_internet_extractor.py  content_repository_extractor.py  extract_pdf.py  presentation_processor.py  remote_content_repository_extractor.py
src/mcp_server/research_mcp_server/: Dockerfile  Dockerfile.dockerignore  QUICK_REFERENCE.md  README.md  SETUP.md  SETUP_COMPLETE.md  __init__.py  opencode-config.example.json  pyproject.toml  requirements.txt  server.py  start_server.py
src/prompts/: case-study-extraction.md  image-description.md  methodology_pattern_analysis.md  repository-extraction.md  visualization_generation.md
(+38 files in other folders)
