[build-system]
requires = ["pip", "wheel"]
build-backend = "pip._internal.build"

[project]
name = "research-mcp-server"
version = "0.1.0"
description = "MCP Server for architecture research - searching case studies and recommending methodologies"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp>=0.1.0",
    "python-dotenv==1.2.2",
    "openai==2.40.0",
    "azure-identity==1.25.3",
    "azure-search-documents==12.0.0",
    "azure-mgmt-resource>=23.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
research-mcp = "server:run"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "W", "I"]
line-length = 100
